@@ -14,6 +14,7 @@
 - extended `flowstreaminstance.close(removed)` delegate by adding `removed` argument
 - exchanged functionality between `>field` (it performs `MAX`) `<field` (it performs `MIN`) in TextDB
 - added `NOSQL/TABLe/TEXTDB().release()` method
+- extended `controller.view()` by adding a support for rendering views from plugins (e.g. `#plugin_name/view_name`)
 
 ========================
 0.0.58
